--- a/admin/login.html
+++ b/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="icon" href="/home/administrator/LPanel/favicon.png" type="image/png"> <!-- Favicon link -->
+    <link rel="icon" href="/home/administrator/LPanel/favicon.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,74 +12,73 @@
             padding: 0;
             display: flex;
             height: 100vh;
-            overflow: hidden; /* Prevents scrolling */
-            background-color: #f2f2f2; /* Light background color */
+            overflow: hidden;
+            background-color: #f2f2f2;
         }
 
         .sidebar {
-            width: 30%; /* Sidebar width */
-            background-color: #000; /* Black background */
-            padding: 40px 20px; /* Adjusted padding for better spacing */
+            width: 30%;
+            background-color: #000;
+            padding: 40px 20px;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Center content vertically */
-            align-items: center; /* Center content horizontally */
+            justify-content: center;
+            align-items: center;
         }
 
         .sidebar h2 {
             margin-bottom: 20px;
-            color: white; /* White text */
-            text-align: center; /* Center align text */
+            color: white;
+            text-align: center;
         }
 
         .sidebar input {
-            width: 100%; /* Full width */
+            width: 100%;
             padding: 10px;
-            margin-bottom: 15px; /* Increased margin for better spacing */
+            margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            background-color: #333; /* Dark background for input fields */
-            color: white; /* White text for input fields */
-            transition: all 0.3s ease; /* Smooth transition for hover */
+            background-color: #333;
+            color: white;
+            transition: all 0.3s ease;
         }
 
         .sidebar input::placeholder {
-            color: #aaa; /* Light placeholder text */
+            color: #aaa;
         }
 
         .sidebar input:hover {
-            border-color: #4CAF50; /* Change border color on hover */
+            border-color: #4CAF50;
         }
 
         .sidebar button {
-            width: 100%; /* Full width */
+            width: 100%;
             padding: 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            transition: all 0.3s ease; /* Smooth transition for hover */
+            transition: all 0.3s ease;
         }
 
         .sidebar button:hover {
-            background-color: #45a049; /* Darker green on hover */
+            background-color: #45a049;
         }
 
         .image-container {
-            width: 70%; /* Adjusted width for image */
-            background: url('/static/login.png') no-repeat center center; /* Image path */
+            width: 70%;
+            background: url('/static/login.png') no-repeat center center;
             background-size: cover;
         }
 
-        /* Responsive adjustments */
         @media (max-width: 768px) {
             .sidebar {
-                width: 100%; /* Full width for smaller screens */
-                height: 100vh; /* Full height */
+                width: 100%;
+                height: 100vh;
             }
             .image-container {
-                display: none; /* Hide image container on small screens */
+                display: none;
             }
         }
     </style>
@@ -92,7 +91,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Log In</button>
             {% if error %}
-                <p style="color:red; text-align: center;">{{ error }}</p> <!-- Center error message -->
+                <p style="color:red; text-align: center;">{{ error }}</p>
             {% endif %}
         </form>
     </div>
