--- a/admin/login.html
+++ b/admin/login.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="icon" href="/home/administrator/LPanel/favicon.png" type="image/png">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            display: flex;
             height: 100vh;
             overflow: hidden;
             background-color: #f2f2f2;
         }
 
         .sidebar {
-            width: 30%;
             background-color: #000;
             padding: 40px 20px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            height: 100%;
         }
 
         .sidebar h2 {
@@ -32,51 +32,38 @@
             text-align: center;
         }
 
-        .sidebar input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        .form-control {
             background-color: #333;
             color: white;
+            border: 1px solid #ccc;
             transition: all 0.3s ease;
         }
 
-        .sidebar input::placeholder {
+        .form-control::placeholder {
             color: #aaa;
         }
 
-        .sidebar input:hover {
+        .form-control:hover {
             border-color: #4CAF50;
         }
 
-        .sidebar button {
-            width: 100%;
-            padding: 10px;
+        .btn {
             background-color: #4CAF50;
             color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
             transition: all 0.3s ease;
         }
 
-        .sidebar button:hover {
+        .btn:hover {
             background-color: #45a049;
         }
 
         .image-container {
-            width: 70%;
             background: url('/static/login.png') no-repeat center center;
             background-size: cover;
+            height: 100%;
         }
 
         @media (max-width: 768px) {
-            .sidebar {
-                width: 100%;
-                height: 100vh;
-            }
             .image-container {
                 display: none;
             }
@@ -84,17 +71,26 @@
     </style>
 </head>
 <body>
-    <div class="sidebar">
-        <h2>Login</h2>
-        <form method="POST">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Log In</button>
-            {% if error %}
-                <p style="color:red; text-align: center;">{{ error }}</p>
-            {% endif %}
-        </form>
+    <div class="d-flex h-100">
+        <div class="sidebar col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+            <h2>Login</h2>
+            <form method="POST" class="w-100 px-4">
+                <div class="mb-3">
+                    <input type="text" class="form-control" name="username" placeholder="Username" required>
+                </div>
+                <div class="mb-3">
+                    <input type="password" class="form-control" name="password" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn w-100">Log In</button>
+                {% if error %}
+                <p class="mt-3 text-danger text-center">{{ error }}</p>
+                {% endif %}
+            </form>
+        </div>
+        <div class="image-container col-md-8 d-none d-md-block"></div>
     </div>
-    <div class="image-container"></div>
+
+    <!-- Bootstrap JS (optional) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
